--- a/frontend/src/app/components/configuration/designation/add-designation/add-designation.component.html
+++ b/frontend/src/app/components/configuration/designation/add-designation/add-designation.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="card">
+<div class="card container">
   <div class="card-header-pills"> <h3 align="center" style="font-family: 'Righteous', cursive;">Designation (Add/ Edit/ Update)</h3></div>
   <div class="card-body">
     <div class="row">
@@ -40,15 +40,18 @@
       </div>
 
       <div class="form-group col-md-2" *ngIf="checkId();else other_content">
+        <br>
         <button class="btn btn-success" (click)="onSubmit()">Insert</button>
       </div>
 
       <ng-template #other_content>
         <div class="form-group col-md-2">
+          <br>
           <button class="btn btn-success" (click)="onSubmit()">Update</button>
         </div>
       </ng-template>
       <div class="form-group col-md-2">
+        <br>
         <button class="btn btn-danger" (click)="reset()">Reset</button>
       </div>
       <table class="table table-striped">
