--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -1,6 +1,5 @@
 <div class="card" >
-  <div class="card-header">
-
+  <div class="card-header" style="text-align: center;">
     <h2>Basic Information </h2>
   </div>
 
@@ -10,117 +9,98 @@
     </div>
     <div class="row">
 
-
-
-      <div class="form-group col-md-4">
-
-        <label >First Name <span style="color: red">*</span></label>
-
-        <input type="text" class="form-control" placeholder="First name" [(ngModel)]="employeeBasicForm.firstName" required>
-
-      </div>
-      <br>
-      <!--<div class="col-md-12"><hr></div>-->
-      <div class=" form-group col-md-4">
-
-        <label >Middle Name</label>
-
-        <input type="text" class="form-control" placeholder="Middle name" [(ngModel)]="employeeBasicForm.middleName" required>
-
-      </div>
-
       <div class="form-group col-md-4">
         <label >Last Name <span style="color: red">*</span></label>
         <input type="text" class="form-control" placeholder="Last name" [(ngModel)]="employeeBasicForm.lastName" required>
       </div>
-      <div class="form-group col-md-4">
-        <label >Nick Name</label>
-        <input type="text" class="form-control" placeholder="Nick name" [(ngModel)]="employeeBasicForm.nickName" required>
 
+      <div class="form-group col-md-4">
+        <label >First Name <span style="color: red">*</span></label>
+        <input type="text" class="form-control" placeholder="First name" [(ngModel)]="employeeBasicForm.firstName" required>
       </div>
 
+      <!--<div class="col-md-12"><hr></div>-->
       <div class=" form-group col-md-4">
+        <label >Middle Name</label>
+        <input type="text" class="form-control" placeholder="Middle name" [(ngModel)]="employeeBasicForm.middleName" required>
+      </div>
+      <br>
 
-        <label >Employee Id Card no</label>
 
-        <input type="text" class="form-control" placeholder="employee id" [(ngModel)]="employeeBasicForm.EmployeeId" required>
-
+      <div class="form-group col-md-2">
+        <label>Street Address </label>
+        <input type="text" class="form-control" name="streetAddress" placeholder="Street Address" [(ngModel)]="employeeBasicForm.streetAddress" >
       </div>
 
-      <!--<div class="col-md-12"><hr></div>-->
-
-
-
-      <div class="form-group col-md-4">
-        <label>Department <span style="color: red">*</span></label>
-        <select class="form-control" (change)="selectDepartment($event.target.value)"  [(ngModel)]="employeeBasicForm.department" required>
-          <option value="">Select Department</option>
-          <option *ngFor="let dept of department" [value]="dept.id">
-            {{dept.departmentName}}
-          </option>
-        </select>
+      <div class="form-group col-md-2">
+        <label>Apartment / Unit# </label>
+        <input type="text" class="form-control" name="apartmentUnit"  placeholder="Apartment Unit" [(ngModel)]="employeeBasicForm.apartmentUnit" >
       </div>
 
-      <div class="form-group col-md-4">
-        <label>Designation <span style="color: red">*</span></label>
-        <select class="form-control" (change)="selectDesignation($event.target.value)" [(ngModel)]="employeeBasicForm.designation" required>
-          <option value="">Select Designation</option>
-          <option *ngFor="let desg of designation" [value]="desg.id">
-            {{desg.title}}
-          </option>
-        </select>
+      <div class="form-group col-md-2">
+        <label>City </label>
+        <input type="text" class="form-control" name="city" placeholder="City" [(ngModel)]="employeeBasicForm.city" >
       </div>
 
-      <div class="form-group col-md-4">
-        <label>Employee Type <span style="color: red">*</span></label>
-        <select class="form-control" name="fkEmployeeType" [(ngModel)]="employeeBasicForm.empType" required>
-          <option value="">Select Employee Type</option>
-          <option *ngFor="let type of empType" [value]="type.id">
-            {{type.typeTitle}}
-          </option>
-        </select>
+      <div class="form-group col-md-2">
+        <label>State </label>
+        <input type="text" class="form-control" name="state" placeholder="State" [(ngModel)]="employeeBasicForm.state" >
+      </div>
+
+      <div class="form-group col-md-2">
+        <label>Zip Code </label>
+        <input type="text" class="form-control" name="zipCode" placeholder="Zip Code" [(ngModel)]="employeeBasicForm.zipCode" >
       </div>
 
 
+      <div class="form-group col-md-2">
+        <label>Home Phone</label>
+        <input type="text" class="form-control" name="homePhone" placeholder="Home Phone" [(ngModel)]="employeeBasicForm.homePhone" required>
+      </div>
 
+      <div class="form-group col-md-2">
+        <label>Alternative Phone</label>
+        <input type="text" class="form-control" name="contactNo" placeholder="Alternative phone" [(ngModel)]="employeeBasicForm.alterContactNo" required>
+      </div>
 
-
-      <!--<div class="col-md-12"><hr></div>-->
 
       <div class="form-group col-md-4">
         <label>Email <span style="color: red">*</span></label>
         <input type="email" class="form-control" name="email" placeholder="email" [(ngModel)]="employeeBasicForm.email" required>
       </div>
 
-      <div class="form-group col-md-4">
-        <label>Contact Number <span style="color: red">*</span></label>
-        <input type="text" class="form-control" name="contactNo" placeholder="phone" [(ngModel)]="employeeBasicForm.contactNo" required>
-      </div>
-      <div class="form-group col-md-4">
-        <label>Alternative Number</label>
-        <input type="text" class="form-control" name="contactNo" placeholder="alternative phone" [(ngModel)]="employeeBasicForm.alterContactNo" required>
+
+      <div class="form-group col-md-2">
+        <label>National ID</label>
+        <input type="text" class="form-control" name="nationalId" placeholder="National Id" [(ngModel)]="employeeBasicForm.nationalId" required>
       </div>
 
-      <div class="form-group col-md-4">
+
+      <div class="form-group col-md-2">
         <label>Date of Birth <span style="color: red">*</span></label>
         <input type="date" class="form-control" name="birthdate" [(ngModel)]="employeeBasicForm.birthdate" required>
       </div>
 
 
-      <!--<div class="col-md-12"><hr></div>-->
-
-      <div class="form-group col-md-4">
+      <div class="form-group col-md-2">
         <label>Gender <span style="color: red">*</span></label>
-
         &nbsp;&nbsp;<p style="margin-left: 20px">
         <input  type="radio" class="form-check-input" value="M" name="gender" [(ngModel)]="employeeBasicForm.gender">Male
 
-        &nbsp;&nbsp;&nbsp;
+        <br/>
         <input type="radio" class="form-check-input" value="F" name="gender" [(ngModel)]="employeeBasicForm.gender">Female
+        <br/>
 
-        &nbsp;&nbsp;&nbsp;
         <input type="radio" class="form-check-input" value="O" name="gender" [(ngModel)]="employeeBasicForm.gender">Other
       </p>
+      </div>
+
+      <div class="form-group col-md-2">
+        <label>Marital Status </label>
+        <select name="maritalStatus" class="form-control" [(ngModel)]="employeeBasicForm.maritalStatus">
+          <option value="married">Married</option>
+          <option value="unmarried">Unmarried</option>
+        </select>
       </div>
 
       <div class="form-group col-md-8">
@@ -128,21 +108,15 @@
         <input type="file" class="form-control" name="photo" (change)="onFileSelected($event)" placeholder="image">
       </div>
       <div class="form-group col-md-4">
-
       </div>
 
       <div class="form-group">
       <img  *ngIf="employeeBasicForm.photo" [src]="employeeBasicForm.photo" height="200" width="200">
       </div>
 
-
-
-
       <div class="form-group col-md-12" align="right" style="margin-top: 20px" >
         <button  class="btn btn-lg btn-success " (click)="onSubmit()">Save Data</button>
       </div>
-
-
 
     </div>
   </div>
